[gd_scene load_steps=10 format=3 uid="uid://d0u284uvkuxp5"]

[ext_resource type="Script" path="res://src/title_ui.gd" id="1_v24im"]
[ext_resource type="Script" path="res://src/title_home.gd" id="2_rgwgy"]
[ext_resource type="SystemFont" uid="uid://be14qyvbd8lox" path="res://assets/fonts/system_font.tres" id="3_5rwlm"]
[ext_resource type="PackedScene" uid="uid://vw0n0v6gcdcl" path="res://assets/scenes/world_loader.tscn" id="4_fj3jq"]
[ext_resource type="PackedScene" uid="uid://cwt1khy7c6ido" path="res://assets/scenes/world_creator.tscn" id="5_s3pu3"]
[ext_resource type="PackedScene" uid="uid://cn6nx0dd15xf6" path="res://assets/scenes/option_menu.tscn" id="6_h6ckt"]
[ext_resource type="PackedScene" uid="uid://bwsftfna5831c" path="res://assets/scenes/mod_menu.tscn" id="7_ccax1"]
[ext_resource type="PackedScene" uid="uid://bs0y3wvy51rwr" path="res://assets/scenes/credits_menu.tscn" id="8_8xnmm"]

[sub_resource type="Theme" id="Theme_0eyne"]

[node name="TitleUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_v24im")

[node name="Interface" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleHome" type="PanelContainer" parent="Interface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_rgwgy")

[node name="MarginContainer" type="MarginContainer" parent="Interface/TitleHome"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/TitleHome/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoadButton" type="Button" parent="Interface/TitleHome/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_5rwlm")
text = "Load"

[node name="NewButton" type="Button" parent="Interface/TitleHome/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_5rwlm")
text = "New"

[node name="SettingsButton" type="Button" parent="Interface/TitleHome/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_5rwlm")
text = "Settings"

[node name="ModsButton" type="Button" parent="Interface/TitleHome/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_5rwlm")
text = "Mods"

[node name="CreditsButton" type="Button" parent="Interface/TitleHome/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_5rwlm")
text = "Credits"

[node name="QuitButton" type="Button" parent="Interface/TitleHome/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_5rwlm")
text = "Quit"

[node name="WorldLoader" parent="Interface" instance=ExtResource("4_fj3jq")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -42.0
offset_right = 88.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0eyne")

[node name="WorldCreator" parent="Interface" instance=ExtResource("5_s3pu3")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -148.0
offset_right = 238.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0eyne")

[node name="OptionMenu" parent="Interface" instance=ExtResource("6_h6ckt")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -108.0
offset_right = 142.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0eyne")

[node name="ModMenu" parent="Interface" instance=ExtResource("7_ccax1")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -20.0
offset_right = 84.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0eyne")

[node name="CreditsMenu" parent="Interface" instance=ExtResource("8_8xnmm")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -20.0
offset_right = 84.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
